# notes

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 951b6b8e9586_first_migration.py
app/: main.py
app/api/: __init__.py  routers.py
app/api/endpoints/: __init__.py  note.py  user.py
app/core/: base.py  config.py  constants.py  db.py  exceptions.py  user.py
app/crud/: base.py  notes.py
app/models/: __init__.py  note.py
app/schemas/: notes.py  spelling.py
app/services/: spell_checker.py
tests/: conftest.py  test_notes.py
tests/fixtures/: notes.py  user.py
